# gpu-based-image-stitching

./: .gitignore  CMakeLists.txt  README.md
include/: app.h  image_stitcher.h  sensor_data_interface.h  stitching_param_generater.h
params/: camchain_0.yaml  camchain_1.yaml  camchain_2.yaml  camchain_3.yaml
src/: app.cc  image_stitcher.cc  sensor_data_interface.cc  stitching_param_generater.cc
